--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
-									<h3>Srividya Dasaraju, Director of Programmingr</h3>
+									<h3>Srividya Dasaraju, Director of Programming</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic12.jpg")/></a>
 									<p>Srividya Dasaraju is a sophomore from Topeka, Kansas majoring in International Relations. Her academic interests include security and terrorism studies, international law, and the politics of climate change. Last summer Srividya interned for Senate Minority Chuck Schumer in DC. She has also previously interned for the Kansas Democratic Party. On campus, she is on the Trojan Policy Debate Team, an associate editor for the Journal of Law and Society, a contributor to Glimpse from the Globe, a member of Phi Alpha Delta, and Campus Events co-coordinator for SCIA. Srividya is also a research assistant for Professor Markowitz in the Security Political Economy Lab where she helps research the relationship between Arctic resource competition and states’ power projection.  Upon graduating, she hopes to attend law school, later entering the field of defense policy.
 								</section>
@@ -166,7 +166,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
-									<h3>Alix Olliver, Treasurer</h3>
+									<h3>Alix Olliver, Director of Finance</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic15.jpg")/></a>
 									<p>Alix Ollivier is a Junior majoring in Political Science. Originally a Computer Science student, he decided to move over to Political Science when the current political climate grew interesting. He just finished his first semester as a Political Science student, interning at City Hall with Councilmember Mike Bonin, known for his efforts on combating homelessness, developing walkable streets and public transit systems. On campus, he volunteers at Liberty for North Korea and enjoys meeting at the Secular Humanists club. He hopes to one day be able to move to DC and fulfill his newfound dream of joining the swamp.
 									</p>
