--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<h3>Adam Grushan and Sophie Greensite, Senior Advisers</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic18.jpg")/></a>
 									<img style = "width: 50%; height: auto" src= "images/pic17.png")/></a>
-									<p>Adam Grushan and Sophie Greensite served on the inaugural Associates Executive Board as Vice President and Director of External Relations respectively. Jointly, they revamped the admissions process to drive engagement, managed a new event schedule to better connect students with mentors in politics, and moderated regular panels and roundtables on a range of issue areas. Adam is a senior double majoring in Economics and Political Science, and Sophie is a senior studying Political Economy. After graduation, Adam will be consulting on financial, economic and accounting damages issues as an associate at TM Financial Forensics, and Sophie, who currently interns in the talent management space, hopes to work as a talent agent. 
+									<p>Adam Grushan and Sophie Greensite served on the inaugural Associates Executive Board as Vice President and Director of External Relations respectively. Jointly, they revamped the admissions process to drive engagement, managed a new event schedule to better connect students with mentors in politics, and moderated regular panels and roundtables on a range of issue areas. Adam is a senior double majoring in Economics and Political Science, and Sophie is a senior studying Political Economy. After graduation, Adam will be consulting on financial, economic and accounting damages issues as an associate at TM Financial Forensics, and Sophie, who currently interns in the talent management space, hopes to work as a talent agent.
 									</p>
 								</section>
 							</div>
@@ -195,7 +195,7 @@
 						<div class="inner">
 							<h2>Apply</h2>
 							<h3>What We’re Looking For</h3>
- 							<p> Unruh Associates is open to all undergraduate and graduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills.</p>
+ 							<p> Unruh Associates is open to all undergraduate and graduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills. An Unruh Associates is someone who is tolerant and open-minded, willing to learn about new topics and hear different viewpoints, and ready to jump into the conversation. We are looking for people who are engaged or looking to be engaged in the community, and are enthusiastic about Unruh Associates and its mission. </p>
 
 							<h3>Frequently Asked Questions</h3>
 
