--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					<section id="four" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Apply</h2>
-							<h3>Application is now available! https://docs.google.com/forms/d/e/1FAIpQLSciGpPCAtb9gXu9AuMQrQT7-OKcZC-_UZ9LSfHSYUJSkV0n8w/viewform?usp=sf_link</h3>
+							<h3>Application is now available! href="#">https://docs.google.com/forms/d/e/1FAIpQLSciGpPCAtb9gXu9AuMQrQT7-OKcZC-_UZ9LSfHSYUJSkV0n8w/viewform?usp=sf_link</h3>
 
 							<p> What We’re Looking For
  							<p> Unruh Associates is open to all undergraduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills. An Unruh Associates is someone who is tolerant and open-minded, willing to learn about new topics and hear different viewpoints, and ready to jump into the conversation. We are looking for people who are engaged or looking to be engaged in the community, and are enthusiastic about Unruh Associates and its mission. </p>
