--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 							<br>(2) The written application opens January 18, 2018 and is due January 23, 2018 at 5:00 PM.
 
-							<br>(3) An individual interview conducted sometime between January 24-25, 2018.</p>
+							<br>(3) An individual interview will be conducted sometime between January 24-25, 2018.</p>
 
 							<p>Applicants will be notified of their application status after the written application and interview rounds. Shortly after the interviews we will welcome our new members!</p>
 
