--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
-									<h3>Alix Olliver, Director of Finance</h3>
+									<h3>Jose Gutierrez, Director of External Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic15.jpg")/></a>
-									<p>Alix Ollivier is a Junior majoring in Political Science. Originally a Computer Science student, he decided to move over to Political Science when the current political climate grew interesting. He just finished his first semester as a Political Science student, interning at City Hall with Councilmember Mike Bonin, known for his efforts on combating homelessness, developing walkable streets and public transit systems. On campus, he volunteers at Liberty for North Korea and enjoys meeting at the Secular Humanists club. He hopes to one day be able to move to DC and fulfill his newfound dream of joining the swamp.
+									<p>José Gutiérrez is a sophomore, pursuing a Political Science and Philosophy double major with a minor in Behavioral Economics, and an international student from Mexico City. After interning at Fundación ProEmpleo Distrito Federal, an NGO and business incubator that fosters Mexican entrepreneurship, José was inspired to explore civic engagement and advocacy. Hence, he joined Undergraduate Student Government as an advocacy delegate and founded defrACT, a student organization that produces public art installations on contemporary social issues, for which he serves as Co-President. José also teaches civics at a local high school through the Unruh Action Civics, Civic Engagement program. He also interned at the Mexico City office of Korn/Ferry International, one of the best international headhunting firms. Previously, José was a trumpet player in the “greatest marching band in the history of the universe (ever)!” which is naturally USC’s own Spirit of Troy. In the future, José hopes to work in a think tank, urban development and be a writer during his spare time (which really means he has no real clue what he wants to do).
 									</p>
 								</section>
 								<section>
