--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									<img style = "width: 50%; height: auto" src= "images/pic15.jpg")/></a>
 									<p>José Gutiérrez is a sophomore, pursuing a Political Science and Philosophy double major with a minor in Behavioral Economics, and an international student from Mexico City. After interning at Fundación ProEmpleo Distrito Federal, an NGO and business incubator that fosters Mexican entrepreneurship, José was inspired to explore civic engagement and advocacy. Hence, he joined Undergraduate Student Government as an advocacy delegate and founded defrACT, a student organization that produces public art installations on contemporary social issues, for which he serves as Co-President. José also teaches civics at a local high school through the Unruh Action Civics, Civic Engagement program. He also interned at the Mexico City office of Korn/Ferry International, one of the best international headhunting firms. Previously, José was a trumpet player in the “greatest marching band in the history of the universe (ever)!” which is naturally USC’s own Spirit of Troy. In the future, José hopes to work in a think tank, urban development and be a writer during his spare time (which really means he has no real clue what he wants to do).
 									</p>
-								</section>
+								<!--</section>
 								<section>
 									<span class="icon major fa-phone"></span>
 									<h3></h3>
@@ -188,7 +188,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Four -->
 					<section id="four" class="wrapper style3 fade-up">
