--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 					<section id="four" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Apply</h2>
-							<h3><a href="https://docs.google.com/forms/d/e/1FAIpQLSciGpPCAtb9gXu9AuMQrQT7-OKcZC-_UZ9LSfHSYUJSkV0n8w/viewform?usp=sf_link">Applications</a> are now available!</h3>
+							<!-- Oskar, enter the link to the application in between the quotes after href below -->
+							<p><a href="" class="button big fit icon fa-external-link" target="_blank">Applications will be live Fall 2018</a></li></p>
 							<p> <b> What We’re Looking For</b>
  							<p> Unruh Associates is open to all undergraduate students of all majors currently pursuing degrees at USC. We’re interested in driven, student leaders who want to make a difference in the political arena. This interest may be demonstrated through academic work, attending and/or organizing political events, prior political volunteerism, political internships, and politically-related activities whether it be political punditry, issue advocacy, or translatable skills. An Unruh Associates is someone who is tolerant and open-minded, willing to learn about new topics and hear different viewpoints, and ready to jump into the conversation. We are looking for people who are engaged or looking to be engaged in the community, and are enthusiastic about Unruh Associates and its mission. </p>
 
@@ -232,8 +233,7 @@
 
 							<p>We want you here! Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and initiatives.
 
-							<!--</p>
-							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHL2o0Om2A-W68qm0FmXeV2gFm1sU7S4lyTfBqdtfGTBhSOw/viewform?fbzx=2135681420234684700" class="button big fit icon fa-external-link" target="_blank">Apply Here!</a></li></p>-->
+							</p>
 						</div>
 
 
