--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 							<li><a href="#one">Our Mission</a></li>
 							<li><a href="#two">What We Do</a></li>
 							<li><a href="#three">Who We Are</a></li>
-							<li><a href="#four">Apply</a></li>
-							<li><a href="#five">Contact</a></li>
+							<li><a href="nvrd.html">NVRD</a></li>
+							<li><a href="#five">Apply</a></li>
+							<li><a href="#six">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -85,7 +86,52 @@
 						</section>
 					</section>
 
-				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>What We Do</h2>
+							<div class="box alt">
+								<div class="row uniform">
+									<div class="4u"><span class="image fit"><img src="images/pic22.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+									<div class="4u$"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic20.jpg" alt="" /></span></div>
+									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									<div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+								</div>
+								<br>
+								<section>
+									<h3>Chapter meetings</h3>
+									<p>Before the Unruh Institute's Tuesday evening Ground Zero events, Associates meet biweekly to host intimate Q&As with panelists and update members on Associates' upcoming programming.</p>
+								</section>
+								<section>
+									<h3>Lunches with Leaders</h3>
+									<p>We host lunches on week days each semester to give Associates a chance to meet face-to-face with prominent political professionals in a more informal setting at the Unruh Institute or the University Club.</p>
+								</section>
+								<section>
+									<h3>Roundtable Discussions</h3>
+									<p>Associates host intimate roundtable discussions each semester on topics ranging from the Supreme Court, to nuclear proliferation, to environmental policy to give Associates a chance to discuss the prominent issues of the day in a civically engaged setting.</p>
+								</section>
+								<section>
+									<h3>Downtown Los Angeles Summit</h3>
+									<p>Every semester, Associates head to Los Angeles City Hall to meet with public and private sector professionals. The trip includes a tour of City Hall, panels hosted in the Tom Bradley Room, and networking sessions. If you have a strong desire to work in politics, this is an excellent opportunity to learn more about career opportunities and make an impression with those working in politics today. </p>
+								</section>
+								<section>
+									<h3>Internships through the Unruh Institute</h3>
+									<p>By becoming a part of Unruh Associates you demonstrate your commitment to political advocacy, on campus and off. The Unruh Institute, our parent organization, recognizes this and invites you to apply for interships <a href="https://dornsife.usc.edu/unruh/internships/">here.</a></p>
+								</section>
+								<section>
+									<h3>Special Events, Competitions, and Programs</h3>
+									<p>Unruh Associates leads a number of other student-run events and intiatives, from leading USC's efforts on National Voter Regisration Day to holding audience spots for Associates at CNN Town Halls. As the nature of politics and government is in a constant state of change, we always consider new ways of expanding our intiatives on campus. </p>
+								</section>
+							</div>
+						</div>
+					</section>
+
+
+				<!-- Two
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -123,7 +169,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style2 fade-up">
@@ -149,20 +195,19 @@
 									<span class="icon major fa-users"></span>
 									<h3>Srividya Dasaraju, Director of Programming</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic12.jpg")/></a>
-									<p>Srividya Dasaraju is a sophomore from Topeka, Kansas majoring in International Relations. Her academic interests include security and terrorism studies, international law, and the politics of climate change. Last summer Srividya interned for Senate Minority Chuck Schumer in DC. She has also previously interned for the Kansas Democratic Party. On campus, she is on the Trojan Policy Debate Team, an associate editor for the Journal of Law and Society, a contributor to Glimpse from the Globe, a member of Phi Alpha Delta, and Campus Events co-coordinator for SCIA. Srividya is also a research assistant for Professor Markowitz in the Security Political Economy Lab where she helps research the relationship between Arctic resource competition and states’ power projection.  Upon graduating, she hopes to attend law school, later entering the field of defense policy.
+									<p>Srividya Dasaraju is a rising junior at the University of Southern California. She is majoring in International Relation, pursuing a progressive Master’s in Public Diplomacy and minoring in Geospatial Intelligence Technologies. Her academic interests include security studies and the politics of climate change. Srividya has previously interned for Senate Minority Leader Chuck Schumer and the Atlantic Council in DC. At USC, she is on the Trojan Policy Debate Team, an executive editor for the Journal of Law and Society, and contributor to Glimpse from the Globe. Srividya also is a research assistant in the Security Political Economy Lab where she helps research the climate change’s impact on Arctic militarization, and produces research for Facebook. Upon graduating, she hopes to attend law school, later entering the field of defense policy.
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Misa Buscemi, Director of Publicity</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic13.jpg")/></a>
-									<p>Misa Buscemi is a sophomore from Buffalo, NY, double majoring in Political Science and Public Relations. She has previously interned for Senate Minority Leader Chuck Schumer and volunteered on the reelection campaign of Mayor Byron Brown in Buffalo, NY.  She is passionate about journalism and credible reporting in the current political climate. She works as a journalist in the USC Annenberg Media Center on a project that attempts to inform students on how to stay civically engaged. She is also a member of Phi Alpha Delta, USC’s Pre-Law fraternity. In the future, she hopes to attend law school and work on political campaigns.</p>
+									<p>Misa Buscemi is a junior at USC studying public relations and political science. Misa spent her summer as a public relations intern for Apple Inc. in Cupertino, CA, supporting their corporate communications team. Previously she interned for Mercury Public Affairs in their Los Angeles office, working on a variety of research and outreach projects. Prior to that, she interned for U.S. Senator Chuck Schumer in her hometown of Buffalo, NY. At USC, Misa works as a social media editor for Annenberg Media and is also involved in the Unruh Institute of Politics’ student organization, Unruh Associates. In her free time Misa enjoys running and traveling when she can.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
 									<h3>Celia Garth, Director of Internal Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic14.jpg")/></a>
-									<p>Celia Garth is a sophomore from Rochester, NY, double majoring in Political Science and Public Relations. She has interned at Community Foundations Leading Change, a national network of community foundations that offers programs and resources to develop community leadership, and the Monroe County Democratic Committee. On campus, she works at the Thornton School of Music, Music Operations Office and is a member of USC’s Pre-Law Fraternity, Phi Alpha Delta. Additionally, Celia is member of USC WYSE (Women and Youth Supporting Each Other) where she serves as a mentor and teacher of an after-school program devoted to empowering middle school girls.
-									</p>
+									<p>Celia Garth is a junior from Rochester, NY pursuing a double major in Political Science and Public Relations. She currently serves as the Director of Internal Relations for the Unruh Associates and the Director of Elections for USC’s Pre-Law Fraternity Phi Alpha Delta, previously serving on their Programming Board. Celia is currently interning with Senator Dianne Feinstein and previously interned with Los Angeles City Council President Herb Wesson as a Communications Intern and Community Foundations Leading Change, a national network of community foundations that offers programs and resources to develop community leadership. Outside of work, Celia also mentors young girls through Women and Youth Supporting Each Other, which offers an after-school program to middle school girls aimed to empower and prepare them for their futures. After she graduates from USC, Celia hopes to pursue a career in political communications or political consulting.
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
@@ -189,9 +234,49 @@
 							</div>
 						</div>
 					</section>
+					<!-- four -->
+						<section id="four" class="wrapper style3 fade-up">
+							<div class="inner">
+								<h2>National Voter Registration Drive</h2>
+								<!-- Oskar, enter the link to the application in between the quotes after href below -->
+								<b>About</b>
+								<p>VoteSC represents a coalition of students and groups on campus dedicated to registering USC to vote and promoting civic engagement. </p>
 
-				<!-- Four -->
-					<section id="four" class="wrapper style3 fade-up">
+								<h3>Frequently Asked Questions</h3>
+
+								<b>How do I get involved?</b>
+
+								<p>(1) You must attend the Unruh Open House in SOS B15 on August 28, 2018 at 5:00 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+
+								<br>(2) The written application opens after the open house on August 28, 2018 and is due September 3, 2018 at 5:00 PM.
+
+								<br>(3) An individual interview will be conducted sometime between September 5-6, 2018.</p>
+
+								<p>Applicants will be notified of their application status on September 7, 2018. Shortly after the interviews we will welcome our new members!</p>
+
+								<b>What if I’m a freshman or have recently become interested in politics?</b>
+
+								<p>We want you to apply, whatever your experience level in politics. Your application is welcomed as long as you’re interested in politics / civic engagement, want to learn more about what a career in politics looks like, or are passionate about connecting with other politically minded students.</p>
+
+								<b>Is Unruh Associates partisan? Do we subscribe to one party’s vision of the country?</b>
+
+								<p>Nope! We are a nonpartisan organization and invite students of all political persuasions to apply.</p>
+
+								<b>Do you have to be political science major to apply?</b>
+
+								<p>Nope! We want you to apply, whatever your major, school, or interest. We have members from many schools at USC, and our members have a wide variety of skills and interests.</p>
+
+								<b>What if I have a different question?</b>
+
+								<p>Great! Shoot us an email @ <a href="#">unruhassociates@gmail.com</a>, and we’ll get back to you ASAP.</p>
+
+								<p>We want you here! Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and initiatives.
+
+								</p>
+								<p><a href="https://www.facebook.com/Vote-SC-2105416659780376/" class="button big fit icon fa-external-link" target="_blank">Check out the VoteSC Facebook page!</a></li></p>
+							</div>
+				<!-- five -->
+					<section id="five" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Apply</h2>
 							<!-- Oskar, enter the link to the application in between the quotes after href below -->
@@ -203,17 +288,13 @@
 
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2018 at 5:30 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+							<p>(1) You must attend the Unruh Open House in SOS B15 on August 28, 2018 at 5:00 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application opens January 18, 2018 and is due January 23, 2018 at 5:00 PM.
+							<br>(2) The written application opens after the open house on August 28, 2018 and is due September 3, 2018 at 5:00 PM.
 
-							<br>(3) An individual interview will be conducted sometime between January 24-25, 2018.</p>
+							<br>(3) An individual interview will be conducted sometime between September 5-6, 2018.</p>
 
-							<p>Applicants will be notified of their application status after the written application and interview rounds. Shortly after the interviews we will welcome our new members!</p>
-
-							<b>How long is the application process?</b>
-
-							<p>The application process takes about 7 days from the written application due date on January 23, 2018 to final decisions.</p>
+							<p>Applicants will be notified of their application status on September 7, 2018. Shortly after the interviews we will welcome our new members!</p>
 
 							<b>What if I’m a freshman or have recently become interested in politics?</b>
 
@@ -237,8 +318,8 @@
 						</div>
 
 
-				<!-- Five -->
-					<section id="five" class="wrapper style2 fade-up">
+				<!-- six -->
+					<section id="six" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Feel free to reach out with any questions.</p>
