--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 									<span class="icon major fa-money"></span>
 									<h3>Jose Gutierrez, Director of External Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic15.jpg")/></a>
-									<p>José Gutiérrez is a rising junior from Mexico City. He is pursuing a Political Science and Philosophy double major, and is interested in pursuing a career in art curating. On campus, he is the Director of Student Safety at Undergraduate Student Government, President and Cofounder of defrACT, and a Warren Bennis Scholar. Over the Summer, José was a Leonard Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395. 
+									<p>José Gutiérrez is a rising junior from Mexico City. He is pursuing a Political Science and Philosophy double major, and is interested in pursuing a career in art curating. On campus, he is the Director of Student Safety at Undergraduate Student Government, President and Cofounder of defrACT, and a Warren Bennis Scholar. Over the Summer, José was a Leonard Schaeffer Fellow and worked at Mayor Garcetti's Office of International Affairs. Previously, he interned at Fundación Proempleo and Korn/Ferry International in Mexico City and did research for Council Member Krekorian through POSC 395.
 								<!--</section>
 								<section>
 									<span class="icon major fa-phone"></span>
@@ -241,7 +241,7 @@
 								<b>About</b>
 								<p>VoteSC represents a coalition of students and groups on campus dedicated to registering USC to vote and promoting civic engagement. </p>
 
-								<h3>Frequently Asked Questions</h3>
+								<!-- <h3>Frequently Asked Questions</h3>
 
 								<b>How do I get involved?</b>
 
@@ -274,7 +274,7 @@
 								</p>
 								<p><a href="https://www.facebook.com/Vote-SC-2105416659780376/" class="button big fit icon fa-external-link" target="_blank">Check out the VoteSC Facebook page!</a></li></p>
 							</div>
-				<!-- five -->
+				<! five -->
 					<section id="five" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Apply</h2>
