--- a/nvrd.html
+++ b/nvrd.html
@@ -36,27 +36,25 @@
 							<section id="four" class="wrapper style3 fade-up">
 
 									<span class="image left"><img src="images/pic19.png" alt="" /></span>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>
+									<br>
 									<h2>National Voter Registration Drive</h2>
 									<!-- Oskar, enter the link to the application in between the quotes after href below -->
 									<b>About</b>
-									<p>VoteSC represents a coalition of students and groups on campus dedicated to registering USC to vote and promoting civic engagement. </p>
+									<p>The Unruh Associates re proud to announce a new initiative for the Fall 2018 semester. Vote SC, created in conjunction with the USC Unruh Institute of Politics and the Undergraduate Student Government, is the largest effort to register students to vote in USC’s history. Centered on bringing voting into the 21st century and putting the power to register to vote directly in the hands of students, Vote SC  has created an online platform ( <a href="http://votesc.turbovote.org" target="_blank">VoteSC Turbovote</a> ) that allows students to register online at their convenience and with ease. Vote SC seeks to connect with all students in USC’s diverse student body, and thus through our online voter platform have created the opportunity to engage with students who come from all different states as well as students who are already registered to vote. </p>
 
-									<br><br><br>
-									<h3>Frequently Asked Questions</h3>
+	            <p> Vote SC in itself is a coalition that seeks to bring together a variety of campus groups in order to face this challenge on our campus head-on. The idea for this coalition originated by looking at the abysmal rates of students on campus who vote, as well as the amounts of undergraduate students who are still not registered to vote. With this lofty goal in mind, Vote SC sought to bring together a variety of student groups in order to engage with every facet of the student population. The coalition has grown beyond its founders to include over 15 student groups, ranging from a variety of political organizations, cultural assemblies, and service organizations. Our ultimate goal is to make voting a seamless and essential part of every student’s time at USC, and to foster a campus culture that promotes civic engagement and breaks down barriers for students to get politically involved. </p>
 
-									<b>How do I get involved?</b>
+	            One way that we’re seeking to engage with our student body this semester is by hosting another edition of our biannual voter competition with our crosstown rivals, UCLA. The competition, last held in 2016, challenges both schools to register as many voters on their campus as possible. UCLA won the competition in 2016 by soundly beating USC, and so this year we are going to be tabling every Monday on Trousdale for our signature Midterm Mondays program, as well as launching a campus wide campaign for National Voter Registration Day on September 25th in the hopes of wrestling the title away from UCLA.
 
-									<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2018 at 5:30 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
-
-									<br>(2) The written application opens January 18, 2018 and is due January 23, 2018 at 5:00 PM.
-
-									<br>(3) An individual interview will be conducted sometime between January 24-25, 2018.</p>
-
-									<p>Applicants will be notified of their application status after the written application and interview rounds. Shortly after the interviews we will welcome our new members!</p>
-
-									<b>How long is the application process?</b>
-
-									<p>The application process takes about 7 days from the written application due date on January 23, 2018 to final decisions.</p>
+	            Looking to get involved with Vote SC? We are always on the lookout for new organizations to partner with and student volunteers. Check out our Facebook page, Vote SC, for more information on upcoming events, and email us at <a href="mailto:votesc@turbovote.org">votesc@turbovote.org</a> for more information. </p></p>
 									<p><a href="https://www.facebook.com/Vote-SC-2105416659780376/" class="button big fit icon fa-external-link" target="_blank">Check out the VoteSC Facebook page!</a></li></p>
 								</div>
 					</section>
