--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
-									<h3>Celia Garth, Aministrator</h3>
+									<h3>Celia Garth, Administrator</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic14.jpg")/></a>
 									<p>Celia Garth is a junior from Rochester, NY pursuing a double major in Political Science and Public Relations. She currently serves as the Director of Internal Relations for the Unruh Associates and the Director of Elections for USC’s Pre-Law Fraternity Phi Alpha Delta, previously serving on their Programming Board. Celia is currently interning with Senator Dianne Feinstein and previously interned with Los Angeles City Council President Herb Wesson as a Communications Intern and Community Foundations Leading Change, a national network of community foundations that offers programs and resources to develop community leadership. Outside of work, Celia also mentors young girls through Women and Youth Supporting Each Other, which offers an after-school program to middle school girls aimed to empower and prepare them for their futures. After she graduates from USC, Celia hopes to pursue a career in political communications or political consulting.
 								</section>
